--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "shared": "file:../shared"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
