--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "@nestjs/core": "11.1.3",
     "@nestjs/platform-express": "11.1.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "shared": "file:../shared"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
